fixing script reference and navbar jump

--- a/src/styles.css
+++ b/src/styles.css
@@ -85,6 +85,7 @@ html {
   height: 3rem;
   width: 100%;
   background-color: var(--color3);
+  position: absolute;
 }
 
 .nav-links {
